[package]
name = "tennis-rankers"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "tools" ]

[dependencies]
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.3.1"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres"] }
sqlx = { version = "0.7.4", features = ["macros", "postgres", "runtime-tokio"] }
tokio = "1.26.0"
